project with full admin complete. need to fix bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,3 +24,11 @@
 .routeLink{
   margin: 2%;
 }
+
+.buttonLookLookalike{
+  background: none;
+  border: none;
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
